#111 Update User, Resume